--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "axios": "^1.6.8",
         "dotenv": "^16.4.5",
+        "JSONStream": "^1.3.5",
         "node-telegram-bot-api": "^0.65.0"
     }
 }
